--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,13 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "datagrunt1"
 version = "0.1.3"
-# ... other project details ...
+
+dependencies = [
+    "duckdb==1.1.0",
+    "polars=>=1.7.1",
+    "pyarrow>=17.0.0",
+    "XlsxWriter>=3.2.0",
+]
 
 [tool.bumpversion]
 current_version = "0.1.3"
