--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "datagrunt1"
-version = "0.1.8"
+version = "0.1.9"
 description = "Read CSV files and convert to other file formats easily"
 readme = "README.md"
 authors = [{ name = "Martin Graham", email = "datagrunt@datagrunt.io" }]
@@ -20,7 +20,7 @@ keywords = ["csv", "data", "duckdb", "polars", "pyarrow", "xlsx", "delimiter"]
     build = ["build", "twine"]
 
 [tool.bumpver]
-current_version = "0.1.8"
+current_version = "0.1.9"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message  = "bump version {old_version} -> {new_version}"
 commit          = true
@@ -32,4 +32,6 @@ push            = false
         'current_version = "{version}"',
         'version = "{version}"',
     ]
-    "src/reader/__init__.py" = ["{version}"]
+    "datagrunt/__init__.py" = [
+        '^__version__ = "{version}"$',
+]
