--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 keywords = ["csv", "data", "duckdb", "polars", "pyarrow", "xlsx", "delimiter"]
  
  [project.optional-dependencies]
-    build = ["build", "twine"]
+    build = ["build", "twine", "bumpver"]
 
 [tool.bumpver]
 current_version = "0.1.11"
