--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,32 @@
 [build-system]
-requires      = ["setuptools>=61.0.0", "wheel"]
+requires      = ["setuptools>=74.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "datagrunt"
-version = "0.1.0"
+version = "0.0.0"
 description = "Read CSV files and convert to other file formats easily"
 readme = "README.md"
 authors = [{ name = "Martin Graham", email = "datagrunt@datagrunt.io" }]
+license = { file = "LICENSE" }
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+]
+keywords = ["csv", "data", "duckdb", "polars", "pyarrow", "xlsx", "delimiter"]
 dependencies = [
     "duckdb",
     "polars",
     "pyarrow",
     "XlsxWriter"
 ]
-keywords = ["csv", "data", "duckdb", "polars", "pyarrow", "xlsx", "delimiter"]
  
  [project.optional-dependencies]
     build = ["build", "twine", "bumpver"]
 
 [tool.bumpver]
-current_version = "0.1.0"
+current_version = "0.0.0"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message  = "bump version {old_version} -> {new_version}"
 commit          = true
